[project]
name = ""
version = ""
description = ""
authors = [
    { name = "Khakers", email = "22665282+khakers@users.noreply.github.com" },
]
dependencies = [
    "mkdocs-material==8.*,>=8.4.1",
    "mkdocs-git-revision-date-localized-plugin",
    "mkdocs-minify-plugin",
    "mkdocs-redirects"
]
requires-python = ">=3.7"

[tool.pdm]
[[tool.pdm.source]]
name = "pypi"
url = "https://pypi.org/simple"
verify_ssl = true

[tool.pdm.scripts]
serve = {cmd = [
    "mkdocs",
    "serve"
]}
deploy = {cmd = [
    "mkdocs",
    "gh-deploy",
    "--force"
]}

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
