[project]
name = "U3-knowledgebase"
version = ""
description = ""
authors = [
    { name = "Khakers", email = "22665282+khakers@users.noreply.github.com" },
]
dependencies = [
    "mkdocs-material==9.5.*",
    "mkdocs-git-revision-date-localized-plugin",
    "mkdocs-minify-plugin",
    "mkdocs-redirects",
    "mkdocs-macros-plugin @ git+https://github.com/fralau/mkdocs_macros_plugin.git@master",
    # mkdocs macros requirement
    "setuptools>=65.3.0",
]
requires-python = ">=3.8"

[tool.pdm]
[[tool.pdm.source]]
name = "pypi"
url = "https://pypi.org/simple"
verify_ssl = true

[tool.pdm.scripts]
serve = {cmd = [
    "mkdocs",
    "serve"
]}
deploy = {cmd = [
    "mkdocs",
    "gh-deploy",
    "--force"
]}
requirements = "pdm export -o requirements.txt --without-hashes"

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
